--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -9,37 +9,42 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v4
 
-      - name: Build
-        run: go build -v ./...
+    - name: Build
+      run: go build -v ./...
 
-  test:
+  tests:
+    # Задание "tests" зависит от задания "build" и будет выполнено после него
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v4
 
-      - name: Test
-        run: go test -v ./...
+    - name: Test
+      run: go test -v ./...
 
-  test-race:
+  # Задание проверяет наличие в коде состояния гонки
+  tests-race:
+    # Задание "tests-race" зависит от задания "build" и будет выполнено после него
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v4
 
-      - name: Test-race
-        run: go test -race ./...
-
+    - name: Test
+      run: go test -race -v ./...
+  
+  # Задание проверяет код на соответствие стилю и отсутствие логических ошибок
   lint:
-    needs: [test, test-race]
+    # Задание "lint" зависит от заданий "tests" и "tests-race" и будет выполнено после них
+    needs: [tests, tests-race]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
-      - uses: golangci/golangci-lint-action@v3 
-
+      # Используется действие "golangci/golangci-lint-action@v3", которое запускает линтер. Он проверит код на соответствие стилю и отсутствие логических ошибок
+      - uses: golangci/golangci-lint-action@v3
